# P.F.M.-Pure-Fucking-Magic-

./: .gitattributes  .gitignore  BLACK-TEAM-ASSESSMENT.md  CONTRIBUTING.md  HACKING-SUMMIT-REPORT.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CNAME  index.html
examples/: generate_example.py  hello.pfm
pfm/: __init__.py  cli.py  converters.py  document.py  export.py  reader.py  security.py  spec.py  stream.py  writer.py
pfm-chrome/: README.md  manifest.json
pfm-chrome/background/: service-worker.js
pfm-chrome/content/: content-main.js  scraper-chatgpt.js  scraper-claude.js  scraper-gemini.js
pfm-chrome/icons/: generate-icons.html
pfm-chrome/popup/: popup.css  popup.html  popup.js
pfm-chrome/shared/: pfm-core.js
pfm-chrome/viewer/: viewer.html  viewer.js
pfm-js/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json
pfm-js/scripts/: fixup-cjs.js
pfm-js/src/: checksum.ts  cli.ts  convert.ts  export.ts  index.ts  parser.ts  serialize.ts  types.ts
pfm-js/src/__tests__/: index.test.ts
pfm-vscode/: package-lock.json
pfm-vscode/src/: parser.ts
pfm-vscode/src/preview/: previewPanel.ts
pfm/tui/: __init__.py  viewer.py  widgets.py
pfm/web/: __init__.py  generator.py  server.py
security_tests/: BLACK-TEAM-PENTEST.md  BURN1T-CHAOS-ASSESSMENT.md  CASHOUT-FINANCIAL-ASSESSMENT.md  HACKING-SUMMIT-REPORT.md  SPECTER-APT-ASSESSMENT.md
tests/: test_conformance.py  test_e2e.py  test_functional.py  test_security.py  test_stress.py  test_unit.py
tests/conformance/: vectors.json
