[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-pfm"
version = "0.2.0"
description = "PFM - Pure Fucking Magic. AI agent output container format."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Jason Sutter"}]
keywords = ["ai", "agent", "file-format", "container", "pfm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools.packages.find]
include = ["pfm*"]

[project.scripts]
pfm = "pfm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
tui = ["textual>=0.83.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
